--- a/src/app/shared/components/signin/signin.component.html
+++ b/src/app/shared/components/signin/signin.component.html
@@ -4,35 +4,22 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-4">
-            <form>
+            <form [formGroup]="loginForm">
               <div class="login-form">
-                <div class="form-group role-types-content">
-                  <b>I am</b><br>
-                  <div class="role-types-options">
-                    <input type="radio" id="admin" name="admin">
-                    <label for="admin">Admin</label>
-                    <input type="radio" id="teacher" name="teacher">
-                    <label for="teacher">Teacher</label>
-                    <input type="radio" id="parent" name="parent">
-                    <label for="parent">Parent</label>
-                  </div>
-                </div>
-
-                <br>
                 <div class="form-control p-0">
                   <div class="input-content">
-                    <input type="text">
+                    <input type="text" formControlName="email">
                     <span></span>
                   </div>
                 </div>
                 <div class="form-control p-0">
                   <div class="input-content">
-                    <input type="text">
+                    <input type="text" formControlName="password">
                     <span></span>
                   </div>
                 </div>
                 <div class="py-2 text-center">
-                  <button>Login</button>
+                  <button (click)="login()">Login</button>
                 </div>
               </div>
             </form>
