--- a/src/app/management/components/schools/schools.component.html
+++ b/src/app/management/components/schools/schools.component.html
@@ -1,4 +1,5 @@
 <div>
+  <button [routerLink]="['/addSchool']">Add School</button>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
