--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -6,6 +6,10 @@
   <mat-icon>person</mat-icon>
   <span>Profile</span>
 </button>
+<button mat-button class="menu-button" [routerLink]="['./admin-users']">
+  <mat-icon>supervised_user_circle</mat-icon>
+  <span>Admin users</span>
+</button>
 <button mat-button class="menu-button" [routerLink]="['./schools']">
   <mat-icon>school</mat-icon>
   <span>Schools</span>
