--- a/src/app/client/components/classes/classes.component.html
+++ b/src/app/client/components/classes/classes.component.html
@@ -1,1 +1,42 @@
-<p>classes works!</p>
+<div>
+  <button [routerLink]="['../add-class']">Add Class</button>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+    <ng-container matColumnDef="class_id">
+      <th mat-header-cell *matHeaderCellDef> Class Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.class_id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.class_name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.class_description}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="year">
+      <th mat-header-cell *matHeaderCellDef> Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button class="menu-button" [routerLink]="['../edit-class', element.class_id]">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button class="menu-button" (click)="deleteClass(element.class_id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+</div>
