--- a/src/app/client/components/client-sidebar/client-sidebar.component.html
+++ b/src/app/client/components/client-sidebar/client-sidebar.component.html
@@ -2,31 +2,36 @@
   <mat-icon>home</mat-icon>
   <span>Dashboard</span>
 </button>
-<button mat-button class="menu-button" [routerLink]="['./institute-profile']">
-  <mat-icon>person</mat-icon>
-  <span>Institute profile</span>
-</button>
 <button mat-button class="menu-button">
   <mat-icon>person</mat-icon>
   <span>Profile</span>
 </button>
-<button mat-button class="menu-button" [routerLink]="['admin/classes']">
-  <mat-icon>supervised_user_circle</mat-icon>
-  <span>Classes</span>
-</button>
-<button mat-button class="menu-button" [routerLink]="['admin/teachers']">
-  <mat-icon>school</mat-icon>
-  <span>Teachers</span>
-</button>
-<button mat-button class="menu-button" [routerLink]="['admin/students']">
-  <mat-icon>school</mat-icon>
-  <span>Students</span>
-</button>
-<button mat-button class="menu-button" [routerLink]="['admin/parents']">
-  <mat-icon>school</mat-icon>
-  <span>Parents</span>
-</button>
-<mat-divider></mat-divider>
+<div *ngIf="loggedUser?.school_id">
+  <button mat-button class="menu-button" [routerLink]="['./institute-profile']" *ngIf="loggedUser.role == userRoles.Admin">
+    <mat-icon>person</mat-icon>
+    <span>Institute profile</span>
+  </button>
+
+  <button mat-button class="menu-button" [routerLink]="['classes']" *ngIf="loggedUser.role == userRoles.Admin">
+    <mat-icon>supervised_user_circle</mat-icon>
+    <span>Classes</span>
+  </button>
+  <button mat-button class="menu-button" [routerLink]="['admin/teachers']" *ngIf="loggedUser.role == userRoles.Admin">
+    <mat-icon>school</mat-icon>
+    <span>Teachers</span>
+  </button>
+  <button mat-button class="menu-button" [routerLink]="['admin/students']" *ngIf="loggedUser.role == userRoles.Admin">
+    <mat-icon>school</mat-icon>
+    <span>Students</span>
+  </button>
+  <button mat-button class="menu-button" [routerLink]="['admin/parents']" *ngIf="loggedUser.role == userRoles.Admin">
+    <mat-icon>school</mat-icon>
+    <span>Parents</span>
+  </button>
+  <mat-divider></mat-divider>
+
+
+</div>
 
 <button mat-button class="menu-button" (click)="logOut()">
   <mat-icon>logout</mat-icon>
