--- a/src/app/management/components/main/main.component.scss
+++ b/src/app/management/components/main/main.component.scss
@@ -17,13 +17,10 @@ mat-sidenav {
 .content {
   height: calc(100vh - 98px);
   border-radius: 10px;
-  margin: 16px;
-  margin-left: 32px;
+  margin: 16px 16px 16px 32px;
 
   display: flex;
   justify-content: center;
-
-  font-size: 2rem;
   color: lightgray;
   padding: 20px;
 }
