--- a/src/app/management/components/schools/schools.component.html
+++ b/src/app/management/components/schools/schools.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button [routerLink]="['/addSchool']">Add School</button>
+  <button [routerLink]="['../addSchool']">Add School</button>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
@@ -37,7 +37,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button class="menu-button" [routerLink]="['/editSchool', element.school_id]">
+        <button mat-button class="menu-button" [routerLink]="['../editSchool', element.school_id]">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-button class="menu-button" (click)="deleteSchool(element.school_id)">
