--- a/src/app/management/components/system-admin-users/add-system-admin-users/add-system-admin-users.component.html
+++ b/src/app/management/components/system-admin-users/add-system-admin-users/add-system-admin-users.component.html
@@ -1,1 +1,21 @@
-<p>add-system-admin-users works!</p>
+<form class="example-form" [formGroup]="addUserForm" (ngSubmit)="addUser()">
+  <table class="example-full-width" cellspacing="0"><tr>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>First name</mat-label>
+      <input matInput formControlName="firstname">
+    </mat-form-field></td>
+    <td><mat-form-field class="example-full-width">
+      <mat-label>Last name</mat-label>
+      <input matInput formControlName="lastname">
+    </mat-form-field></td>
+  </tr></table>
+
+  <p>
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email">
+    </mat-form-field>
+  </p>
+
+  <button type="submit">Add</button>
+</form>
