--- a/src/app/client/components/classes/classes.component.html
+++ b/src/app/client/components/classes/classes.component.html
@@ -22,6 +22,17 @@
       <th mat-header-cell *matHeaderCellDef> Year </th>
       <td mat-cell *matCellDef="let element"> {{element.year}} </td>
     </ng-container>
+
+    <ng-container matColumnDef="teacher">
+      <th mat-header-cell *matHeaderCellDef> Teacher </th>
+      <td mat-cell *matCellDef="let element"><a [routerLink]="['../edit-teacher', element.teacher_id]"> {{element.first_name}} {{element.last_name}}</a></td>
+    </ng-container>
+
+    <ng-container matColumnDef="students">
+      <th mat-header-cell *matHeaderCellDef> Students </th>
+      <td mat-cell *matCellDef="let element"><a [routerLink]="['../class-students', element.class_id]"> View students</a></td>
+    </ng-container>
+
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
