--- a/src/app/client/components/parents/parents.component.html
+++ b/src/app/client/components/parents/parents.component.html
@@ -1,1 +1,46 @@
-<p>parents works!</p>
+<div>
+  <button [routerLink]="['../add-parent']">Add Parent</button>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+    <ng-container matColumnDef="parent_id">
+      <th mat-header-cell *matHeaderCellDef> Parent Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.parent_id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="first_name">
+      <th mat-header-cell *matHeaderCellDef> first name </th>
+      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="last_name">
+      <th mat-header-cell *matHeaderCellDef> last name </th>
+      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+    <ng-container matColumnDef="view_children">
+      <th mat-header-cell *matHeaderCellDef>children </th>
+      <td mat-cell *matCellDef="let element"> <a [routerLink]="['../view-children', element.parent_id]">view children</a> </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button class="menu-button" [routerLink]="['../edit-parent', element.parent_id]">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button class="menu-button" (click)="deleteTeacher(element.parent_id,element.user_id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+</div>
