--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+table {
+  width: 900px;
+  margin: 0 20px;
+}
