--- a/src/app/client/components/students/students.component.html
+++ b/src/app/client/components/students/students.component.html
@@ -1,45 +1,46 @@
 <div>
-  <button [routerLink]="['../add-student']">Add Student</button>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../add-student']">Add Student</button>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
 
 
     <ng-container matColumnDef="nr_amzes">
-      <th mat-header-cell *matHeaderCellDef> nr_amzes </th>
+      <th mat-header-cell *matHeaderCellDef> Nr Amzes </th>
       <td mat-cell *matCellDef="let element"> {{element.nr_amzes}} </td>
     </ng-container>
 
     <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> first name </th>
+      <th mat-header-cell *matHeaderCellDef> First name </th>
       <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> last name </th>
+      <th mat-header-cell *matHeaderCellDef> Last name </th>
       <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
+      <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
     <ng-container matColumnDef="date_of_join">
-      <th mat-header-cell *matHeaderCellDef> date_of_join </th>
+      <th mat-header-cell *matHeaderCellDef> Date of Join </th>
       <td mat-cell *matCellDef="let element"> {{element.date_of_join}} </td>
     </ng-container>
     <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> gender </th>
+      <th mat-header-cell *matHeaderCellDef> Gender </th>
       <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
     </ng-container>
     <ng-container matColumnDef="date_of_birth">
-      <th mat-header-cell *matHeaderCellDef> date_of_birth </th>
+      <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
       <td mat-cell *matCellDef="let element"> {{element.date_of_birth}} </td>
     </ng-container>
     <ng-container matColumnDef="mobile_no">
-      <th mat-header-cell *matHeaderCellDef> mobile_no </th>
+      <th mat-header-cell *matHeaderCellDef> Mobile No. </th>
       <td mat-cell *matCellDef="let element"> {{element.mobile_no}} </td>
     </ng-container>
     <ng-container matColumnDef="parent_id">
-      <th mat-header-cell *matHeaderCellDef> parent </th>
+      <th mat-header-cell *matHeaderCellDef> Parent </th>
       <td mat-cell *matCellDef="let element"> <a [routerLink]="['../edit-parent',element.parent_id]">{{element.parent_id}} </a></td>
     </ng-container>
     <ng-container matColumnDef="actions">
