--- a/src/app/client/components/teachers/teacher-classes/teacher-classes.component.html
+++ b/src/app/client/components/teachers/teacher-classes/teacher-classes.component.html
@@ -1,6 +1,4 @@
 <div>
-  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../add-class']">Add Class</button>
-
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
 
 
@@ -24,27 +22,9 @@
       <td mat-cell *matCellDef="let element"> {{element.year}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="teacher">
-      <th mat-header-cell *matHeaderCellDef> Teacher </th>
-      <td mat-cell *matCellDef="let element"><a [routerLink]="['../edit-teacher', element.teacher_id]"> {{element.first_name}} {{element.last_name}}</a></td>
-    </ng-container>
-
     <ng-container matColumnDef="students">
       <th mat-header-cell *matHeaderCellDef> Students </th>
-      <td mat-cell *matCellDef="let element"><a [routerLink]="['../class-students', element.class_id]"> View students</a></td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button class="menu-button" [routerLink]="['../edit-class', element.class_id]">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-button class="menu-button" (click)="deleteClass(element.class_id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-
-      </td>
+      <td mat-cell *matCellDef="let element"><a [routerLink]="['../../class-students', element.class_id]"> View students</a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
