--- a/src/app/management/components/schools/schools.component.html
+++ b/src/app/management/components/schools/schools.component.html
@@ -1,6 +1,7 @@
 <div>
-  <button [routerLink]="['../addSchool']">Add School</button>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../addSchool']">Add School</button>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
 
 
     <ng-container matColumnDef="school_id">
