--- a/src/app/management/components/system-admin-users/edit-system-admin-users/edit-system-admin-users.component.html
+++ b/src/app/management/components/system-admin-users/edit-system-admin-users/edit-system-admin-users.component.html
@@ -1,21 +1,19 @@
-<form class="example-form" [formGroup]="editUserForm" (ngSubmit)="editUser()">
-  <table class="example-full-width" cellspacing="0"><tr>
-    <td><mat-form-field class="example-full-width">
-      <mat-label>First name</mat-label>
-      <input matInput formControlName="firstname">
-    </mat-form-field></td>
-    <td><mat-form-field class="example-full-width">
-      <mat-label>Last name</mat-label>
-      <input matInput formControlName="lastname">
-    </mat-form-field></td>
-  </tr></table>
 
-  <p>
-    <mat-form-field class="example-full-width">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" formControlName="email">
-    </mat-form-field>
-  </p>
+<form class="row g-3" [formGroup]="editUserForm" (ngSubmit)="editUser()">
+  <div class="col-md-6">
+    <label for="firstName" class="form-label">First name</label>
+    <input type="text" class="form-control" id="firstName" formControlName="firstname">
+  </div>
+  <div class="col-md-6">
+    <label for="lastName" class="form-label">Last name</label>
+    <input type="text" class="form-control" id="lastName" formControlName="lastname">
+  </div>
+  <div class="col-12">
+    <label for="email" class="form-label">Email</label>
+    <input type="email" class="form-control" id="email" placeholder="test@domain.al" formControlName="email">
+  </div>
 
-  <button type="submit">Edit</button>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Edit</button>
+  </div>
 </form>
