--- a/src/app/management/components/system-admin-users/system-admin-users.component.html
+++ b/src/app/management/components/system-admin-users/system-admin-users.component.html
@@ -1,6 +1,7 @@
 <div>
-  <button [routerLink]="['../add-admin-users']">Add Admin User</button>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../add-admin-users']">Add Admin User</button>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
 
 
     <ng-container matColumnDef="user_id">
