--- a/src/app/shared/modals/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/modals/confirm-modal/confirm-modal.component.html
@@ -1,33 +1,18 @@
-<section>
-    <button mat-dialog-close mat-icon-button>
-        <svg
-          width="18"
-          height="18"
-          viewBox="0 0 18 18"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M10.6491 9.00013L17.6579 1.99094C18.114 1.53502 18.114 0.797859 17.6579 0.341939C17.202 -0.11398 16.4649 -0.11398 16.0089 0.341939L8.99989 7.35114L1.99106 0.341939C1.53493 -0.11398 0.798002 -0.11398 0.342092 0.341939C-0.114031 0.797859 -0.114031 1.53502 0.342092 1.99094L7.35093 9.00013L0.342092 16.0093C-0.114031 16.4653 -0.114031 17.2024 0.342092 17.6583C0.5693 17.8858 0.868044 18 1.16657 18C1.4651 18 1.76363 17.8858 1.99106 17.6583L8.99989 10.6491L16.0089 17.6583C16.2364 17.8858 16.5349 18 16.8334 18C17.132 18 17.4305 17.8858 17.6579 17.6583C18.114 17.2024 18.114 16.4653 17.6579 16.0093L10.6491 9.00013Z"
-            fill="#7E83A1"
-          />
-        </svg>
-    </button>
-    <div mat-dialog-title>
-        <p class="mat-subheading-1">{{ title}}</p>
+<!-- Modal -->
+<div class="modal d-block" id="exampleModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ title}}</h5>
+        <button type="button" class="btn-close" (click)="cancel()"></button>
       </div>
-
-    <div mat-dialog-content>
-        <div class="mat-body-1" [innerHtml]="message"></div>
+      <div class="modal-body">
+        {{message}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="cancel()">{{cancelButtonLabel}}</button>
+        <button type="button" class="btn btn-primary" (click)="submit()">{{confirmButtonLabel}}</button>
+      </div>
     </div>
-
-    <div class="form-item" mat-dialog-actions>
-      <button
-        (click)="cancel()"
-      >{{cancelButtonLabel}}</button>
-      <div class="spacer"></div>
-      <button
-        (click)="submit()"
-      >{{confirmButtonLabel}}</button>
-    </div>
-  </section>
+  </div>
+</div>
